--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title:               Cryptograph Ltd
-tagline:             'educating value'
+tagline:             'Wellington Data Science'
 description:         'Wellington New Zealand Data Science and Cryptocurrencies Education'
 url:                 https://cryptograph.co.nz
 baseurl:             /
