--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title:               Cryptograph Ltd
 tagline:             'Wellington Data Science'
-description:         'Wellington New Zealand Data Science and Cryptocurrencies Education'
+description:         'Data Science and Cryptocurrencies Education Wellington New Zealand'
 url:                 https://cryptograph.co.nz
 baseurl:             /
 paginate:            5
